# enpm808x_final_inspection_robot

./: .doxyfile  .travis.yml  CMakeLists.txt  README.md  dependencies.rosinstall  package.xml
Proposal/: Quad_chart.odp
docs/doxygen/html/: CanCharacterizerNode_8cpp.html  CanCharacterizerNode_8cpp__incl.map  CanCharacterizerNode_8cpp__incl.md5  CanCharacterizer_8cpp.html  CanCharacterizer_8cpp__incl.map  CanCharacterizer_8cpp__incl.md5  CanCharacterizer_8hpp.html  CanCharacterizer_8hpp__dep__incl.map  CanCharacterizer_8hpp__dep__incl.md5  CanCharacterizer_8hpp__incl.map  CanCharacterizer_8hpp__incl.md5  CanCharacterizer_8hpp_source.html  InspectionControllerNode_8cpp.html  InspectionController_8cpp.html  InspectionController_8cpp__incl.map  InspectionController_8cpp__incl.md5  InspectionController_8hpp.html  InspectionController_8hpp__dep__incl.map  InspectionController_8hpp__dep__incl.md5  InspectionController_8hpp__incl.map  InspectionController_8hpp__incl.md5  InspectionController_8hpp_source.html  TestMain_8cpp.html  TestMain_8cpp__incl.map  TestMain_8cpp__incl.md5  annotated.html  classCanCharacterizer-members.html  classCanCharacterizer.html  classInspectionController-members.html  classInspectionController.html  classes.html  dir_000002_000000.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_148e2169d7f9289c2eae412a149ddcf4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  (+3 more)
docs/doxygen/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_2.js  functions_4.js  functions_5.js  pages_0.js  searchdata.js
docs/doxygen/latex/: CanCharacterizerNode_8cpp.tex  CanCharacterizerNode_8cpp__incl.md5  CanCharacterizer_8cpp.tex  CanCharacterizer_8cpp__incl.md5  CanCharacterizer_8hpp.tex  CanCharacterizer_8hpp__dep__incl.md5  CanCharacterizer_8hpp__incl.md5  InspectionControllerNode_8cpp.tex  InspectionController_8cpp.tex  InspectionController_8cpp__incl.md5  InspectionController_8hpp.tex  InspectionController_8hpp__dep__incl.md5  InspectionController_8hpp__incl.md5  TestMain_8cpp.tex  TestMain_8cpp__incl.md5  annotated.tex  classCanCharacterizer.tex  classInspectionController.tex  dir_13e138d54eb8818da29c3992edef070a.tex  dir_148e2169d7f9289c2eae412a149ddcf4.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  index.tex  refman.tex
include/: CanCharacterizer.hpp
include/enpm808x_final_inspection_robot/: CanCharacterizer.hpp  InspectionController.hpp
launch/: create_map.launch  demo.launch  main.launch  spawn_can.launch  spawn_cans_from_list.launch
msg/: InspectionMetrics.msg
results/: cppcheck_and_cpplint.txt
src/: CanCharacterizer.cpp  CanCharacterizerNode.cpp  InspectionController.cpp  InspectionControllerNode.cpp
srv/: InspectCan.srv  LocalizeCan.srv
test/: CanCharacterizerTest.cpp  TestInspectionController.cpp  TestMain.cpp
test/launch/: test_cans.launch  test_inspection_controller.launch  test_main.launch
test/maps/test_main_maps/: map.pgm
urdf/: can.urdf.xacro
